<?xml version="1.0"?>
<package format="2">
  <name>tb3_test</name>
  <version>0.0.0</version>
  <description>The tb3_test package</description>

  <maintainer email="ljmanso@todo.todo">ljmanso</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>turtlebot3_gazebo</build_depend>
  <build_depend>turtlebot3_house</build_depend>
  <build_depend>turtlebot3_navigation</build_depend>
  <build_depend>sdformat</build_depend>

  <build_export_depend>turtlebot3_gazebo</build_export_depend>
  <build_export_depend>turtlebot3_house</build_export_depend>
  <build_export_depend>turtlebot3_navigation</build_export_depend>

  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_house</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>sdformat</exec_depend>


  <export>
  </export>
</package>
